# chanson.live

./: .dockerignore  .gitignore  .releaserc  CHANGELOG.md  Dockerfile  Dockerfile.provider  README.md  backup_stream.py  build.mjs  bunfig.toml  docker-compose.yml  main.py  package-lock.json  package.json  prettier.config.js  pyproject.toml  radio.py  remix.config.js  requirements.txt  stream.py  tailwind.config.js  tsconfig.json  tsconfig.server.json
.github/workflows/: release.yaml  release.yml
app/: entry.client.tsx  entry.server.tsx  root.tsx
app/components/: metadata.tsx  queue.tsx
app/provider/: index.ts
app/routes/: _index.tsx  index.tsx
app/server/: admin-page.ts  app-page.ts  cache.ts  config.ts  fs.ts  index.ts  mediasoup.ts  player.ts  provider.ts  queue.ts  requests.ts  test-e2e.ts  test-page.ts  test-stream.ts  tracks.ts  types.ts  websocket.ts  youtube.ts
app/server/db/: index.ts  queries.ts  schema.ts
app/styles/: app.css
app/utils/: player.client.tsx  player.tsx  socket.ts
controller/: Dockerfile  main.py  player.py
controller/commands/: moderation.py  play.py  queue_handler.py
controller/config/: __init__.py  db.py  options.py
hls/: state.config
liquidsoap/: Dockerfile
media/: __init__.py  youtube.py
nginxhls/: Dockerfile  nginx.conf  stream.conf
radio/: live.liq
server/: command-server.ts  commandServer.ts  index.ts  mediasoup-handler.ts  mediasoupHandler.ts  socket-handler.ts  socketHandler.ts  types.ts
telegram_bot/: config.py  db.py  getter.py  main.py  player.py  pyproject.toml
telegram_bot/commands/: __init__.py  moderation.py  play.py  queue_handler.py  search.py
telegram_bot/config/: db.py  logger.py  options.py
worker/: Dockerfile  biome.json  core.server.ts  package-lock.json  package.json  rdt.config.ts  remix.config.js  tailwind.config.js  tsconfig.json
worker/app/: entry.server.tsx  root.tsx
worker/app/components/: metadata.tsx
worker/server/: mediasoup-handler.ts  types.ts
