[tool.poetry]
name = "radio"
version = "0.1.0"
description = ""
authors = ["Ayaan Zaidi <hi@obviy.us>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
yt-dlp = "^2022.11.11"
requests = "^2.28.1"
spotdl = { version = "4.0.6", allow-prereleases = true }
spotipy = "^2.22.0"
python-telegram-bot = "^13.15"
cerberus = "^1.3.4"
coloredlogs = "^15.0.1"

[tool.poetry.group.dev.dependencies]
poetryup = "^0.12.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
